# Test1

./: .gitignore  Main2.py  Test af TRIN i Item data.py  Test4.py  behandel.py  behandel_sp_list.py  main.py  package-lock.json  package.json  playwright_test.py  playwright_test2.py  playwright_test3.py  proces_skabelon_haderslev_forslag.py  pyproject.toml
