[project]
name = "Test1"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "q-haderslev-vbo",
    "q-sharepoint-api",
    "playwright==1.59.0",
    "q-datafordeleren-api",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.3.0" }
q-haderslev_vbo = { git = "https://github.com/haderslev-rpa/q-haderslev-vbo.git", branch = "main" }
q-sharepoint-api = { git = "https://github.com/haderslev-rpa/q-sharepoint-api.git", branch = "main" }
q-datafordeleren-api = { git = "https://github.com/haderslev-rpa/q-datafordeleren-api.git", branch = "main" }

